# dvsg

./: .gitignore  README.md  demo.ipynb  environment-build.yml  environment-core.yml  environment-manga.yml  environment.yml  pico.save  pyproject.toml  setup.py
src/dvsg/: calculations.py  helpers.py  modelling.py  plotting.py  preprocessing.py
src/dvsg/boneyard/: calculate_dvsg.py  dvsg_tools.py
src/dvsg/calculations/: calculate_dvsg.py  calculate_dvsg_v2.py  calculate_dvsg_v3.py  dvsg_tools.py
src/dvsg/modelling/: MapModel.py
src/dvsg/plotting/: plotting.py
src/dvsg/tests/: test__dvsg.py
tests/: conftest.py
tests/unit/: test_calculations.py  test_preprocessing.py
