[build-system]
requires = ["setuptools>=61,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvsg"
version = "0.1.0"
description = "Tools used for the calculation of DVSG values"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26.4,<2",
  "scipy>=1.13.1",
  "matplotlib>=3.8",
  "astropy>=6,<7",
  "packaging==20.9",
  "setuptools<81",
  "marshmallow<4",
  "webargs<6",
  "marvin",
  "sdss-marvin>=2.8.2",
  "sdss-mangadap>=4.3.0",
]

[project.optional-dependencies]
plotting = [
  "smplotlib",
]
dev = [
  "pytest>=7",
]
build = [
  "build>=1.4",
  "packaging>=24",
  "wheel>=0.46",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
